[package]
name = "generalized-djikstra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.3"
priority-queue = "*"
bytemuck = {version = "1.12", features = ["derive"]}
wgpu = "0.17"
winit = "0.28"
plotters = "*"
